# determination

./: Makefile  README.md  determination.cabal
app/: Main.hs
src/: Determination.hs
